# uiautomator2

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  ABOUT.rst  CHANGELOG  Claude.md  DEVELOP.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  QUICK_REFERENCE.md  README.md  README_CN.md  XPATH.md  XPATH_CN.md  appveyor.yml  custom_port_issues.md  file.txt  inde dfsadkfldsfkljsflkasjfsalfkjsf.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.txt  ttss
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md  stale.yml
.github/workflows/: main.yml  pythonapp.yml  release.yml
.swm/: swimm.json
_archived/: init.py  webview.py
_archived/aircv/: __init__.py
demo_tests/: conftest.py  test_app.py  test_core.py  test_device.py  test_input.py  test_selector.py  test_watcher.py
docs/: 2to3.md  Makefile  api.rst  conf.py  contents.rst  index.rst
docs/source/: conf.py  index.rst
examples/: apk_install.py  minitouch.py  multi-thread-example.py  test_simple_example.py
examples/adbkit-init/: README.md  main.js  package.json
examples/batteryweb/: README.md  main.py
examples/batteryweb/templates/: index.html
examples/com.codeskyblue.remotecamera/: main_test.py
examples/com.netease.cloudmusic/: README.txt  main.py  xpath_test.py
examples/runyaml/: run.py  test.yml
examples/u2iniit-standalone/: README.txt  init-vendor.sh  main.go  proxyhttp.go  uiautomator2-init-standalone.bat
examples/webpower/: main.py
mobile_tests/: conftest.py  runtest.sh  test_session.py  test_settings.py  test_simple.py  test_toast.py  test_utils.py  test_watcher.py  test_xpath.py
tests/: conftest.py  runtest.sh  test_agent_cli.py  test_core.py  test_ext_webview.py  test_image.py  test_import.py  test_input.py  test_logger.py  test_push_pull.py  test_screenrecord.py  test_selector.py  test_session.py  test_settings.py  test_simple.py  test_swipe.py  test_toast.py  test_utils.py  test_watcher.py  test_xpath.py
tests/real_device/: conftest.py  skip_test_image.py  test_push_pull.py  test_settings.py  test_utils.py  test_xpath.py
tests/unittests/: test_xpath.py
uiautomator2/: MultiTouchHelper  __init__.py  __main__.py  _input.py  _old_init.py  _proto.py  _selector.py  abcd.py  abstract.py  adbutils.py  app_start.py  base.py  core.py  exceptions.py  image.py  init.py  multiTouchHelper.py  screenrecord.py  session.py  settings.py  simplexml.py  swipe.py  tkgui.py  uauto.py  utils.py  version.py  watcher.py  webview.py  widget.py  xpath.py
uiautomator2/_archived/: init.py  messagebox.py  webview.py  widget.py
uiautomator2/_archived/aircv/: README.md  __init__.py
uiautomator2/agent_cli/: __init__.py  __main__.py  click_ext.py  client.py  commands.py  options.py  output.py  protocol.py  server.py
uiautomator2/assets/: .gitignore  sync.sh
uiautomator2/cli/: __init__.py  __main__.py  install.py  runyaml.py
uiautomator2/ext/: ocr.py  webview.py
uiautomator2/ext-archived/ocr/: README.md  __init__.py  baiduOCR.py
uiautomator2/ext/aircv/: README.md  __init__.py
uiautomator2/ext/htmlreport/: README.md  __init__.py
uiautomator2/ext/htmlreport/assets/: index.html  simplehttpserver.py  start.bat
uiautomator2/ext/info/: __init__.py  conf.py
uiautomator2/ext/ocr/: __init__.py  baiduOCR.py
uiautomator2/ext/perf/: README.md  __init__.py
uiautomator2/ext/xpath/: README.md  __init__.py
uibox/: Makefile  README.md  go.mod  go.work  main.go
uibox/cmd/: httpcheck.go  nohup.go  root.go
