[tool.poetry]
name = "uiautomator2"
version = "3.2.1+webviewextDrissionPage"
description = "uiautomator for android device with webviewextension using DrissionPage"
homepage = "https://github.com/YuYoungG/uiautomator2"
authors = ["younggg <younggg2218@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["*/assets/*"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
lxml = "*"
adbutils = ">=2.9.3,<3"
Pillow = "*"
retry2 = "^0.9.5"
importlib-resources = {version = "*", markers = "python_version < \"3.9\""}
DrissionPage = "^4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
ipython = "*"
coverage = "^7.6.0"

[tool.poetry.scripts]
uiautomator2 = "uiautomator2.__main__:main"

[tool.poetry-dynamic-versioning] # 根据tag来动态配置版本号
enable = false
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.substitution]
files = ["uiautomator2/version.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
