[metadata]
name = uiautomator2
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Python Wrapper for Android UiAutomator2 test tool
license = MIT
description-file = ABOUT.rst
home-page = https://github.com/codeskyblue/uiautomator2
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
    uiautomator2
