[metadata]
name = uiautomator2
author = codeskyblue
author_email = codeskyblue@gmail.com
summary = Python Wrapper for Google Android UiAutomator2 test tool
license = MIT
description_file = ABOUT.rst
home_page = https://github.com/openatx/uiautomator2
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
    uiautomator2

# support: pip3 install uiautomator2[image]
[extras]
image =
    scikit-image
    imutils
    findit
    imageio>=2.8.0,<3.0
    imageio-ffmpeg>=0.4.2,<1.0
    websocket_client>=0.57.0,<1.0

[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts =
   uiautomator2 = uiautomator2.__main__:main
